--- a/public/404.html
+++ b/public/404.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta 
         http-equiv="refresh"
-        content="0; URL='[https://Leo-0814.github.io/todo_react](https://Leo-0814.github.io/todo_react)'"
+        content="0; URL='https://Leo-0814.github.io/todo_react'"
     /> 
-    
+
     <title>Todo List 404 re-direct</title>
 </head>
 <body>
