--- a/public/404.html
+++ b/public/404.html
@@ -8,7 +8,7 @@
         content="0; URL='https://Leo-0814.github.io/todo_react'"
     /> 
 
-    <title>Todo List 404 re-direct</title>
+    <title>Todo List 404 re-directqq</title>
 </head>
 <body>
     
