--- a/404.html
+++ b/404.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta 
         http-equiv="refresh"
-        content="0; URL='[https://Leo-0814.github.io/todo_react](https://Leo-0814.github.io/todo_react)'"
+        content="0; URL='https://Leo-0814.github.io/todo_react'"
     /> 
-    
-    <title>Todo List 404 re-direct</title>
+
+    <title>Todo List 404 re-directqq</title>
 </head>
 <body>
     
